--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "lucide-react": "^0.525.0",
     "next": "^15.3.5",
     "openai": "^5.8.2",
     "pg": "^8.16.3",
