--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,9 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@types/react": "^19.1.8",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/react": "19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@tailwindcss/postcss": "^4.1.11"
+    "typescript": "5.8.3"
   }
 }
