--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/RpalZ/QlooHackathon#readme",
   "dependencies": {
     "@supabase/supabase-js": "^2.50.3",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
